# private-gpt

./: pyproject.toml  settings-ollama-pg.yaml
private_gpt/components/ingest/: ingest_component.py
private_gpt/ui/: ui.py
